fix the overflow in the controls

--- a/frappe/public/less/controls.less
+++ b/frappe/public/less/controls.less
@@ -12,3 +12,7 @@
 .frappe-control .select-all {
 	margin-right: 5px;
 }
+
+.frappe-control .control-value {
+	overflow-wrap: break-word;
+}
